# gof_patterns

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  entrypoint.sh
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
lib/: CMakeLists.txt
src/: App.hpp  AppBuilder.cpp  AppBuilder.hpp  AppGof.hpp  CMakeLists.txt  Main.cpp  PatternsName.cpp  PatternsName.hpp  TerminalApp.cpp  TerminalApp.hpp  UnknownGofApp.cpp  UnknownGofApp.hpp
src/log/: log4cplus_properties.ini  logger.cpp  logger.hpp
src/patterns/: UnknownGofApp.cpp  UnknownGofApp.hpp
src/patterns/behavioral/memento/: MementoGofApp.cpp  MementoGofApp.hpp
test/: GofPatternsTest.cpp
tests/: CMakeLists.txt  GofPatternsTest.cpp
